Use Collection.of factories.